--- a/EfDatabase/EfDatabase.csproj
+++ b/EfDatabase/EfDatabase.csproj
@@ -48,9 +48,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseContext.cs" />
-    <Compile Include="Migrations\201705071841264_init.cs" />
-    <Compile Include="Migrations\201705071841264_init.Designer.cs">
-      <DependentUpon>201705071841264_init.cs</DependentUpon>
+    <Compile Include="Migrations\201705081452226_Init.cs" />
+    <Compile Include="Migrations\201705081452226_Init.Designer.cs">
+      <DependentUpon>201705081452226_Init.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201705081455314_AddGrpType.cs" />
+    <Compile Include="Migrations\201705081455314_AddGrpType.Designer.cs">
+      <DependentUpon>201705081455314_AddGrpType.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\DataStructure.cs" />
@@ -62,8 +66,11 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201705071841264_init.resx">
-      <DependentUpon>201705071841264_init.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201705081452226_Init.resx">
+      <DependentUpon>201705081452226_Init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201705081455314_AddGrpType.resx">
+      <DependentUpon>201705081455314_AddGrpType.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
