--- a/WebAPI/Web.config
+++ b/WebAPI/Web.config
@@ -48,13 +48,18 @@
     </compilers>
   </system.codedom>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" >
+      <parameters>
+        <parameter value="mssqllocaldb"/>
+      </parameters>
+    </defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
   <connectionStrings>
     <add name="MS4Db" 
+         providerName="System.Data.SqlClient"
          connectionString="Data Source=(localdb)\mssqllocaldb;Initial Catalog=MS4Db;Integrated Security=True"/>
   </connectionStrings>
 </configuration>
