update unit test

--- a/UnitTestProj/App.config
+++ b/UnitTestProj/App.config
@@ -7,12 +7,16 @@
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="Data Source=(localdb)\mssqllocaldb;Initial Catalog=MS4Db;Integrated Security=True" />
+        <parameter value="mssqllocaldb"/>
       </parameters>
     </defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  
+  <connectionStrings>
+    <add name="MS4Db"
+         providerName="System.Data.SqlClient"
+         connectionString="Data Source=(localdb)\mssqllocaldb;Initial Catalog=MS4Db;Integrated Security=True"/>
+  </connectionStrings>
 </configuration>
