--- a/WebUI.v1/WebUI.v1.csproj
+++ b/WebUI.v1/WebUI.v1.csproj
@@ -70,6 +70,7 @@
     <Content Include="app\config\services.js" />
     <Content Include="app\views\dashboard.html" />
     <Content Include="app\views\main.html" />
+    <Content Include="Content\docs.min.css" />
     <Content Include="Content\ui-bootstrap-csp.css" />
     <Content Include="packages.config" />
     <Content Include="Scripts\angular-ui\ui-bootstrap-tpls.js" />
