--- a/WebUI.v1/packages.config
+++ b/WebUI.v1/packages.config
@@ -3,6 +3,8 @@
   <package id="Angular.UI.Bootstrap" version="2.5.0" targetFramework="net452" />
   <package id="Angular.UI.UI-Router" version="0.4.2" targetFramework="net452" />
   <package id="angularjs" version="1.6.4" targetFramework="net452" />
+  <package id="AngularJS.Animate" version="1.6.4" targetFramework="net452" />
+  <package id="AngularJS.Core" version="1.6.4" targetFramework="net452" />
   <package id="bootstrap" version="3.3.7" targetFramework="net452" />
   <package id="jQuery" version="3.1.1" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.3" targetFramework="net452" />
