--- a/WebUI.v1/packages.config
+++ b/WebUI.v1/packages.config
@@ -5,6 +5,7 @@
   <package id="AngularJS.Animate" version="1.6.4" targetFramework="net452" />
   <package id="AngularJS.Core" version="1.6.4" targetFramework="net452" />
   <package id="bootstrap" version="3.3.7" targetFramework="net452" />
+  <package id="JasmineTest" version="2.2.0" targetFramework="net452" />
   <package id="jQuery" version="3.1.1" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.3" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net452" developmentDependency="true" />
