--- a/WebUI.v1/bundleconfig.json
+++ b/WebUI.v1/bundleconfig.json
@@ -5,6 +5,7 @@
       "app/app.js",
       "app/config/router.js",
       "app/config/services.js",
+      "app/directives/fileModel.js",
       "app/components/login.js",
       "app/components/dashboard.js"
 
