--- a/WebUI.v1/WebUI.v1.csproj
+++ b/WebUI.v1/WebUI.v1.csproj
@@ -66,16 +66,19 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app\components\dashboard.js" />
+    <Content Include="app\components\display-files.js" />
     <Content Include="app\config\router.js" />
     <Content Include="app\config\services.js" />
     <Content Include="app\directives\fileModel.js" />
     <Content Include="app\views\dashboard.html" />
+    <Content Include="app\views\display-files.html" />
     <Content Include="app\views\main.html" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\docs.min.css" />
     <Content Include="Content\jasmine\jasmine.css" />
     <Content Include="Content\jasmine\jasmine_favicon.png" />
+    <Content Include="Content\my-style.css" />
     <Content Include="Content\ui-bootstrap-csp.css" />
     <Content Include="packages.config" />
     <Content Include="Scripts\angular-animate.js" />
@@ -103,6 +106,7 @@
     <Content Include="Scripts\angular-animate.min.js.map" />
     <Content Include="Content\bootstrap.min.css.map" />
     <Content Include="Content\bootstrap.css.map" />
+    <Content Include="Temp_Data\ds1.json" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
