--- a/WebUI.v1/bundleconfig.json
+++ b/WebUI.v1/bundleconfig.json
@@ -7,7 +7,8 @@
       "app/config/services.js",
       "app/directives/fileModel.js",
       "app/components/login.js",
-      "app/components/dashboard.js"
+      "app/components/dashboard.js",
+      "app/components/display-files.js"
 
     ]
   }
