--- a/WebAPI/Web.config
+++ b/WebAPI/Web.config
@@ -8,7 +8,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <appSettings></appSettings>
+  <appSettings>
+    <add key="AttachementPath" value="Z:\archie\dowload"/>
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
@@ -59,5 +61,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="MS4Db" providerName="System.Data.SqlClient" connectionString="Data Source=(localdb)\mssqllocaldb;Initial Catalog=MS4Db;Integrated Security=True" />
+  
   </connectionStrings>
 </configuration>
