--- a/WebAPI/Web.config
+++ b/WebAPI/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings>
-    <add key="AttachementPath" value="Z:\archie\dowload"/>
+    <add key="AttachementPath" value="\\pdwmfsp001\Stg_AppDocs\HUP"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
